--- a/index.html
+++ b/index.html
@@ -41,12 +41,11 @@
                 <a class="pull-left" href="#"><img class="media-object" src="imgres.png" height="64" width="64"></a>
                 <div class="media-body">
                   <h4 class="media-heading">
-                    <a href="#">https://github.com/t-masai</a>
+                    <a href="https://github.com/t-masai">https://github.com/t-masai</a>
                   </h4>
                   <p>MY GITHUB</p>
                 </div>
               </li>
-              <li class="media"></li>
             </ul>
           </div>
         </div>
