--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="row">
           <div class="col-md-4"></div>
           <div class="col-md-4">
-            <img src="a58e4c10.jpg" class="center-block img-responsive img-thumbnail">
+            <img src="a58e4c10.jpg" alt="としくんの写真" class="center-block img-responsive img-thumbnail">
             <h3 class="text-center">としくん</h3>
             <p class="text-center">好きなものは納豆。 趣味：バスケットボール、映画鑑賞、旅行 人材紹介会社でIT企業担当している。外国人のエンジニア人材をメインに扱っている</p>
           </div>
@@ -55,7 +55,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4">
-            <img src="original.jpg" class="img-responsive">
+            <img src="original.jpg" alt="としくんの好きなものはカレー" class="img-responsive">
             <h2>好きなものカレー</h2>
             <p>とにかくカレーが好き。
               <br>辛くないカレーはカレーではない。
@@ -63,13 +63,13 @@
               <br>あとインドに１年半住んでたこともある。</p>
           </div>
           <div class="col-md-4">
-            <img src="20160101231730.gif" class="img-responsive">
+            <img src="20160101231730.gif" alt="としくんの好きな趣味はバスケ" class="img-responsive">
             <h2>趣味はバスケ</h2>
             <p>小学校、中学校とバスケットボールをしていた。部長だった。高校からなぜか柔道部に入部した。それも部長だった。
               <br>でもそんなに強くない。</p>
           </div>
           <div class="col-md-4">
-            <img src="introduction_L01.jpg" class="img-responsive img-thumbnail">
+            <img src="introduction_L01.jpg" alt="としくんの仕事は人材紹介ビジネス" class="img-responsive img-thumbnail">
             <h2>人材紹介ビジネス
               <br>
             </h2>
