--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <div class="col-md-12">
             <ul class="media-list">
               <li class="media">
-                <a class="pull-left" href="#"><img class="media-object" src="imgres.png" height="64" width="64"></a>
+                <a class="pull-left" href="https://github.com/t-masai"><img class="media-object" alt="としくんのgithub" src="imgres.png" height="64" width="64"></a>
                 <div class="media-body">
                   <h4 class="media-heading">
                     <a href="https://github.com/t-masai">https://github.com/t-masai</a>
